<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pantheon.android.ui.ForgotPasswordActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvForgotPasswordStatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textSize="@dimen/tvfp_statement"
        android:layout_marginTop="@dimen/tvfp_statement_margintop"
        android:layout_marginRight="@dimen/tvfp_statement_marginright"
        android:layout_marginLeft="@dimen/tvfp_statement_marginleft"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="@dimen/tvfp_statement_linespacing"/>

    <EditText
        android:id="@+id/etmailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etemailid_hint"
        android:layout_marginTop="@dimen/etemailid_margintop"
        android:layout_marginRight="@dimen/etemailid_marginright"
        android:layout_marginLeft="@dimen/etemailid_marginleft"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/btnreset_text"
        android:textColor="@color/white"
        android:textSize="@dimen/btnreset_textsize"
        android:layout_marginTop="@dimen/btnreset_margintop"
        android:layout_marginRight="@dimen/btnreset_marginright"
        android:layout_marginLeft="@dimen/btnreset_marginleft"/>

</LinearLayout>
