<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Frame Layout -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <!-- Navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/left_drawer_backgroundcolor"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llMyFavourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ivmargin_bottom"
                android:src="@drawable/markfav"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMyFavourites_text"
                android:textSize="@dimen/tvtext_size"
                android:textColor="@color/tvtext_color"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOfflineMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/addtoOffline_margintop">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ivmargin_bottom"
                android:src="@drawable/mode"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOfflineMode_text"
                android:textSize="@dimen/tvtext_size"
                android:textColor="@color/tvtext_color"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ivmargin_bottom"
                android:src="@drawable/contact"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvContactUs_text"
                android:textSize="@dimen/tvtext_size"
                android:textColor="@color/tvtext_color"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ivmargin_bottom"
                android:src="@drawable/myaccount"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMyAccount_text"
                android:textSize="@dimen/tvtext_size"
                android:textColor="@color/tvtext_color"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ivmargin_bottom"
                android:src="@drawable/logout"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLogout_text"
                android:textSize="@dimen/tvtext_size"
                android:textColor="@color/tvtext_color"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>